--- a/src/theme/sidebar/_channel.scss
+++ b/src/theme/sidebar/_channel.scss
@@ -48,6 +48,7 @@
 		padding: 0 18px;
 		height: var(--channel-height);
 		border-radius: 0;
+		align-items: center;
 	}
 	.mainContent-20q_Hp {
 		padding: 0;
